--- a/Regresión/Regresion_Bajas_Antiguedad_v6.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v6.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 109,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -72,22 +72,22 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "8907c4ea-b753-412a-b285-1a5c813d17d9",
+        "outputId": "bf2aa718-bfda-4bcb-8548-614ac9897c47",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 34
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 110,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -106,14 +106,14 @@
         "                                \"ENTRE_1_2_ANIOS\": 'mean',\"ENTRE_3_4_ANIOS\": 'mean',\n",
         "                                \"MAS_5_ANIOS\": 'mean',\"TOTAL_BAJAS\": 'mean'})\n"
       ],
-      "execution_count": 122,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "RbQx30WIGlcX",
-        "outputId": "e08b8d34-02e0-47b2-9859-d8435a55283a",
+        "outputId": "e4bc9f30-7192-4716-82d2-7f35406f447c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -122,7 +122,7 @@
       "source": [
         "data.shape"
       ],
-      "execution_count": 123,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -134,7 +134,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 123
+          "execution_count": 5
         }
       ]
     },
@@ -142,7 +142,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ohLCva0p_Fe6",
-        "outputId": "b2e32c32-3b53-4efe-9144-5f7042703c00",
+        "outputId": "976414e3-545c-4c72-8360-5e565b96bba8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
@@ -151,7 +151,7 @@
       "source": [
         "data.head()"
       ],
-      "execution_count": 124,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -278,7 +278,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 124
+          "execution_count": 6
         }
       ]
     },
@@ -286,7 +286,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "SFcT3pVv_J2G",
-        "outputId": "437864dc-b723-4299-f778-bf6e97926e4b",
+        "outputId": "8e5857c4-8444-4598-8904-39f99d720384",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 284
@@ -296,7 +296,7 @@
         "#data.info()\n",
         "data.describe()"
       ],
-      "execution_count": 125,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -449,7 +449,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 125
+          "execution_count": 7
         }
       ]
     },
@@ -461,7 +461,7 @@
       "source": [
         "data['MES_BAJA']=round(data['MES_BAJA'] )"
       ],
-      "execution_count": 126,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -476,8 +476,147 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.neighbors import KNeighborsClassifier"
       ],
-      "execution_count": 133,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_s61I1EmEkxY"
+      },
+      "source": [
+        "x = np.array(data.drop(['TOTAL_BAJAS'],1 ))\n",
+        "y = np.array( data['TOTAL_BAJAS'] )"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V-CZoHz6GM-f"
+      },
+      "source": [
+        "pd.DataFrame(x)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v4bMtsTzF7Eg",
+        "outputId": "7b0a70aa-8db1-4e72-a738-484bd7ce2e91",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 402
+        }
+      },
+      "source": [
+        "pd.DataFrame(y)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1491.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1888.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1533.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1152.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1182.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>1384.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>1430.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>1114.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>1031.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>978.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>1018.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>2435.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         0\n",
+              "0   1491.0\n",
+              "1   1888.5\n",
+              "2   1533.5\n",
+              "3   1152.5\n",
+              "4   1182.5\n",
+              "5   1384.0\n",
+              "6   1430.0\n",
+              "7   1114.0\n",
+              "8   1031.0\n",
+              "9    978.0\n",
+              "10  1018.0\n",
+              "11  2435.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "code",
