--- a/Regresión/Regresion_Bajas_Antiguedad_v6.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v6.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 87,
+      "execution_count": 148,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "b29e1d4f-2368-4e72-b8df-9afd01e7790e",
+        "outputId": "e97b684e-da0c-4e18-b1f2-10be9bf50b0a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -82,7 +82,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 88,
+      "execution_count": 149,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,20 +100,18 @@
       },
       "source": [
         "data = pd.read_csv('/content/drive/My Drive/Dataset/BAJAS.txt',delimiter='~')\n",
-        "data = data[['MES_BAJA','TRIM_1','TRIM_2','TRIM_3','TRIM_4','ENTRE_1_2_ANIOS','ENTRE_3_4_ANIOS','MAS_5_ANIOS','TOTAL_BAJAS']]\n",
-        "data = data.groupby(['MES_BAJA']).agg({\"MES_BAJA\":'mean',\"TRIM_1\": 'mean',\"TRIM_2\": 'mean',\n",
-        "                                \"TRIM_3\": 'mean',\"TRIM_4\": 'mean',  \n",
-        "                                \"ENTRE_1_2_ANIOS\": 'mean',\"ENTRE_3_4_ANIOS\": 'mean',\n",
-        "                                \"MAS_5_ANIOS\": 'mean',\"TOTAL_BAJAS\": 'mean'})\n"
+        "data = data[['MES_BAJA','GRUPO_ANTIGUEDAD','TOTAL_BAJAS']]\n",
+        "data = data.groupby(['MES_BAJA', 'GRUPO_ANTIGUEDAD'])['TOTAL_BAJAS'].mean()\n",
+        "#data = data.groupby(['MES_BAJA']['GRUPO_ANTIGUEDAD'] ).agg({\"TOTAL_BAJAS\": 'mean'})"
       ],
-      "execution_count": 103,
+      "execution_count": 172,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "RbQx30WIGlcX",
-        "outputId": "e81813df-5180-458c-ed54-593a67c75333",
+        "outputId": "8cff426a-981f-4dc1-b949-bafff5acd47a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -122,19 +120,19 @@
       "source": [
         "data.shape"
       ],
-      "execution_count": 95,
+      "execution_count": 173,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(12, 9)"
+              "(84,)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 95
+          "execution_count": 173
         }
       ]
     },
@@ -169,7 +167,7 @@
       "source": [
         "data['MES_BAJA']=round(data['MES_BAJA'] )"
       ],
-      "execution_count": 104,
+      "execution_count": 144,
       "outputs": []
     },
     {
@@ -182,64 +180,81 @@
         "y = np.array( data['TOTAL_BAJAS'] )\n",
         "y = y[:,np.newaxis]"
       ],
-      "execution_count": 105,
+      "execution_count": 145,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JhJtgmsOwARw"
+      },
+      "source": [
+        "x"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "6LOitxc2Dh4A",
-        "outputId": "a46770f5-9e41-4b2f-ad5c-d80a2d1af45c",
+        "outputId": "f621cb9c-6992-47a3-f060-0f94559c55dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 104
+          "height": 306
         }
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import accuracy_score\n",
         "from sklearn.svm import SVC\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.linear_model import LogisticRegression \n",
         "\n",
-        "x1 = x[:,0]\n",
-        "x1 = x1[:,np.newaxis]\n",
-        "y1 = x[:,1]\n",
-        "y1 = y1[:,np.newaxis]\n",
-        "\n",
-        "x_train, x_test, y_train, y_test = train_test_split(x1, y1,train_size = 0.2,\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x, y,train_size = 0.2,\n",
         "                                        random_state = 0)\n",
         "                                    \n",
         "\n",
         "#Modelo regresión Logística\n",
         "logreg= LogisticRegression()\n",
         "logreg.fit(x_train, y_train)\n",
-        "y_pred = logreg.predict(x_test)\n",
+        "y_pred_m1 = logreg.predict(x_test)\n",
         "print('Precisión Modelo Regresión Logística')\n",
         "print(logreg.score(x_train,y_train))\n",
         "\n",
         "#Modelo vectores de soporte\n",
-        "#svc = SVC(kernel='rbf')\n",
-        "#svc.fit(x_train,y_train)\n",
-        "#y_predic = svc.predic(x_test)\n",
-        "#print('Precisión Vectores de soporte')\n",
-        "#print(svc.score(x_train,y_train))\n",
+        "svc = SVC(kernel='rbf')\n",
+        "svc.fit(x_train,y_train)\n",
+        "y_predic_m2 = svc.predict(x_test)\n",
+        "print('Precisión Vectores de soporte')\n",
+        "print(svc.score(x_train,y_train))\n",
         "\n",
-        " \n"
+        " "
       ],
-      "execution_count": 114,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Precisión Modelo Regresión Logística\n",
-            "1.0\n"
+            "0.5384615384615384\n",
+            "Precisión Vectores de soporte\n",
+            "0.11538461538461539\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n",
             "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
             "  y = column_or_1d(y, warn=True)\n"
           ],
