--- a/Regresión/Regresion_Bajas_Antiguedad_v6.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v6.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 148,
+      "execution_count": 214,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "e97b684e-da0c-4e18-b1f2-10be9bf50b0a",
+        "outputId": "0dd02e47-8c0f-4aa1-b915-a7ca107b3aaf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -82,7 +82,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 149,
+      "execution_count": 215,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,40 +101,16 @@
       "source": [
         "data = pd.read_csv('/content/drive/My Drive/Dataset/BAJAS.txt',delimiter='~')\n",
         "data = data[['MES_BAJA','GRUPO_ANTIGUEDAD','TOTAL_BAJAS']]\n",
-        "data = data.groupby(['MES_BAJA', 'GRUPO_ANTIGUEDAD'])['TOTAL_BAJAS'].mean()\n",
-        "#data = data.groupby(['MES_BAJA']['GRUPO_ANTIGUEDAD'] ).agg({\"TOTAL_BAJAS\": 'mean'})"
+        "data = data.groupby(['MES_BAJA', 'GRUPO_ANTIGUEDAD']).agg({\"MES_BAJA\":'mean',\"GRUPO_ANTIGUEDAD\":'mean',\"TOTAL_BAJAS\":'mean'})\n",
+        "data['MES_BAJA']=round(data['MES_BAJA'] )\n",
+        "data['GRUPO_ANTIGUEDAD']=round(data['GRUPO_ANTIGUEDAD'] )\n",
+        "\n",
+        "x = np.array(data.drop(['TOTAL_BAJAS'],1 ))\n",
+        "y = np.array( data['TOTAL_BAJAS'] )\n",
+        "y = y[:,np.newaxis]"
       ],
-      "execution_count": 172,
+      "execution_count": 216,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RbQx30WIGlcX",
-        "outputId": "8cff426a-981f-4dc1-b949-bafff5acd47a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "data.shape"
-      ],
-      "execution_count": 173,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(84,)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 173
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -142,7 +118,7 @@
         "id": "ohLCva0p_Fe6"
       },
       "source": [
-        "data.head()"
+        "data "
       ],
       "execution_count": null,
       "outputs": []
@@ -153,43 +129,8 @@
         "id": "SFcT3pVv_J2G"
       },
       "source": [
-        "#data.info()\n",
+        "data.info()\n",
         "data.describe()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_bGr2ehBBsYb"
-      },
-      "source": [
-        "data['MES_BAJA']=round(data['MES_BAJA'] )"
-      ],
-      "execution_count": 144,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "IXBdFZ6_Gu8g"
-      },
-      "source": [
-        "x = np.array(data.drop(['TOTAL_BAJAS'],1 ))\n",
-        "y = np.array( data['TOTAL_BAJAS'] )\n",
-        "y = y[:,np.newaxis]"
-      ],
-      "execution_count": 145,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "JhJtgmsOwARw"
-      },
-      "source": [
-        "x"
       ],
       "execution_count": null,
       "outputs": []
