--- a/Regresión/Regresion_Bajas_Antiguedad_v6.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v6.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 214,
+      "execution_count": 236,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "0dd02e47-8c0f-4aa1-b915-a7ca107b3aaf",
+        "outputId": "0a042f2d-38d3-4124-8c72-f7b238e2be1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -82,7 +82,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 215,
+      "execution_count": 237,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,46 +96,61 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0JYqth2Ty8-k",
-        "outputId": "8bbebcfc-6451-42ae-ec37-b0eab0d3a204",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        }
+        "id": "0JYqth2Ty8-k"
       },
       "source": [
         "data = pd.read_csv('/content/drive/My Drive/Dataset/BAJAS.txt',delimiter='~')\n",
         "data = data[['MES_BAJA','GRUPO_ANTIGUEDAD','TOTAL_BAJAS']]\n",
-        "data = data.groupby(['MES_BAJA', 'GRUPO_ANTIGUEDAD']).agg({\"MES_BAJA\":'mean',\"GRUPO_ANTIGUEDAD\":'mean',\"TOTAL_BAJAS\":'mean'})\n",
-        "data['MES_BAJA']=round(data['MES_BAJA'] )\n",
-        "data['GRUPO_ANTIGUEDAD']=round(data['GRUPO_ANTIGUEDAD'] )\n",
-        "\n",
-        "x  = data.iloc[:,:-1].values\n",
-        "y  = data.iloc[:,2]\n",
-        "y = y[:,np.newaxis]"
+        "data = data.groupby(['MES_BAJA','GRUPO_ANTIGUEDAD']).agg({\"MES_BAJA\":'mean',\"GRUPO_ANTIGUEDAD\":'mean',\"TOTAL_BAJAS\": 'mean'})  \n",
+        "data['GRUPO_ANTIGUEDAD'] = round(data['GRUPO_ANTIGUEDAD'] )\n",
+        "data['MES_BAJA'] = round(data['MES_BAJA'] )"
       ],
-      "execution_count": 222,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:9: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
-            "  if __name__ == '__main__':\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 362,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ohLCva0p_Fe6"
+        "id": "B4JGj2SUMxd1"
       },
       "source": [
-        "data "
+        "data"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AoourC-kI9N8",
+        "outputId": "b79cf996-f911-46cb-b03d-74fb38f22f7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        }
+      },
+      "source": [
+        "data.info()"
+      ],
+      "execution_count": 364,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "MultiIndex: 84 entries, (1, 1) to (12, 7)\n",
+            "Data columns (total 3 columns):\n",
+            " #   Column            Non-Null Count  Dtype  \n",
+            "---  ------            --------------  -----  \n",
+            " 0   MES_BAJA          84 non-null     int64  \n",
+            " 1   GRUPO_ANTIGUEDAD  84 non-null     int64  \n",
+            " 2   TOTAL_BAJAS       84 non-null     float64\n",
+            "dtypes: float64(1), int64(2)\n",
+            "memory usage: 2.5 KB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -152,37 +167,57 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "unuQVPuR5IcN",
-        "outputId": "048ff15d-bfa9-432f-8fd5-3e6721d91b16",
+        "id": "MceCDDTfEbbZ",
+        "outputId": "1cd671a1-b86d-4a18-9698-d95f2cde5230",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 70
         }
       },
       "source": [
-        "type(y)"
+        "x  = data.iloc[:,:-1].values\n",
+        "y  = data.iloc[:,2]\n",
+        "y = y[:,np.newaxis]"
       ],
-      "execution_count": 230,
+      "execution_count": 369,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "numpy.ndarray"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 230
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:3: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
+            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+          ],
+          "name": "stderr"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "e07kFlEADEPO"
+      },
+      "source": [
+        "y"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0oi0Fka9OZ3k"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "6LOitxc2Dh4A",
-        "outputId": "07049c6c-a5e9-433b-aaad-5a1db7525144",
+        "outputId": "5fcae38a-162d-4a35-a154-ce4ec6cb7c25",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
@@ -212,7 +247,7 @@
         "\n",
         " "
       ],
-      "execution_count": 231,
+      "execution_count": 248,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +264,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-231-4445f963db75>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m#Modelo regresión Logística\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mlogreg\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mLogisticRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mlogreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0my_pred_m1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlogreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Precisión Modelo Regresión Logística'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-248-4445f963db75>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m#Modelo regresión Logística\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mlogreg\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mLogisticRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mlogreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0my_pred_m1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlogreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Precisión Modelo Regresión Logística'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_logistic.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m   1526\u001b[0m         X, y = check_X_y(X, y, accept_sparse='csr', dtype=_dtype, order=\"C\",\n\u001b[1;32m   1527\u001b[0m                          accept_large_sparse=solver != 'liblinear')\n\u001b[0;32m-> 1528\u001b[0;31m         \u001b[0mcheck_classification_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1529\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1530\u001b[0m         \u001b[0mn_samples\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/utils/multiclass.py\u001b[0m in \u001b[0;36mcheck_classification_targets\u001b[0;34m(y)\u001b[0m\n\u001b[1;32m    167\u001b[0m     if y_type not in ['binary', 'multiclass', 'multiclass-multioutput',\n\u001b[1;32m    168\u001b[0m                       'multilabel-indicator', 'multilabel-sequences']:\n\u001b[0;32m--> 169\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Unknown label type: %r\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    170\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    171\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mValueError\u001b[0m: Unknown label type: 'continuous'"
